# prognosis_marker

./: .dockerignore  .gitignore  Binary_TrainAUC_StepwiseSelection.R  Dockerfile  Example_data.csv  Main_Binary.R  Main_Survival.R  Postprocess_Coexpression_Enrichment.R  README.md  Survival_TrainAUC_StepwiseSelection.R  code_analyzer.py  docker-entrypoint.sh  fetch_opentargets_genes.py  generate_configs.py  generate_opentargets_configs.py  install.sh  pixi.toml  requirements.txt  run.sh  run2.sh  run_analysis.sh  run_docker.bat  run_docker.sh  run_gui.sh  run_opentargets.sh  run_opentargets_binary.sh  run_opentargets_survival.sh  run_server.sh  streamlit_app.py  tcga_efo_mapping.json
.claude/: settings.local.json
config/: TCGA_ACC_analysis.yaml  TCGA_ACC_opentargets_analysis.yaml  TCGA_BLCA_analysis.yaml  TCGA_BLCA_opentargets_analysis.yaml  TCGA_BRCA_analysis.yaml  TCGA_BRCA_opentargets_analysis.yaml  TCGA_CESC_analysis.yaml  TCGA_CESC_opentargets_analysis.yaml  TCGA_CHOL_analysis.yaml  TCGA_CHOL_opentargets_analysis.yaml  TCGA_COADREAD_analysis.yaml  TCGA_COADREAD_opentargets_analysis.yaml  TCGA_COAD_analysis.yaml  TCGA_COAD_opentargets_analysis.yaml  (+55 more)
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/.claude/agent-memory/bkit-gap-detector/: MEMORY.md
gui/src-tauri/capabilities/: default.json
gui/src-tauri/src/: lib.rs
gui/src-tauri/src/commands/: analysis.rs  config.rs  fs_ops.rs  mod.rs  opentargets.rs  runtime.rs  setup.rs
gui/src-tauri/src/models/: config.rs  error.rs
gui/src-tauri/src/utils/: csv_reader.rs  mod.rs  process.rs  yaml.rs
(+117 files in other folders)
